# pbzarr-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPEC.md  pixi.toml
.github/workflows/: ci.yml
pbz/: Cargo.toml
pbz/src/: cli.rs  error.rs  limits.rs  main.rs  pipeline.rs  progress.rs
pbz/src/commands/: cat.rs  completions.rs  drop_cmd.rs  export.rs  export_engine.rs  import.rs  info.rs  input_resolve.rs  list.rs  mod.rs  rename.rs  set.rs  validate.rs
pbz/src/io/: bed_error.rs  bed_reader.rs  bed_writer.rs  bedgraph_writer.rs  d4_reader.rs  depth_reader.rs  interval_to_per_base.rs  mod.rs  tsv_writer.rs  value_reader.rs
pbz/tests/: cat.rs  drop_cmd.rs  export.rs  fixtures_compiles.rs  import.rs  import_bed.rs  info.rs  list.rs  rename.rs  set.rs  validate.rs
pbz/tests/fixtures/: mod.rs
pbzarr/: Cargo.toml
pbzarr/examples/: roundtrip_writer.rs
pbzarr/src/: error.rs  lib.rs  region.rs  store.rs  track.rs
pbzarr/tests/: integration.rs
src/: lib.rs  store.rs  track.rs
tests/: integration.rs
