[package]
name = "pbz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for the PBZ (Per-Base Zarr) format"

[[bin]]
name = "pbz"
path = "src/main.rs"

[dependencies]
pbzarr = { path = "../pbzarr" }
