[package]
name = "pbz"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line tool for the PBZ (Per-Base Zarr) format"

[[bin]]
name = "pbz"
path = "src/main.rs"

[dependencies]
pbzarr = { path = "../pbzarr" }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
crossbeam-channel = "0.5"
indicatif = "0.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6"
num_cpus = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rlimit = "0.10"
ndarray = "0.17"
fs-err = "3"
d4 = { git = "https://github.com/cademirch/d4-format.git", default-features = false, features = ["reader_only"] }
noodles = { version = "0.105", features = ["bgzf"] }
thiserror = "2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
